# hl_mai_lab_00

./: .gitignore  docker-compose.yml  main.cpp
docker/: .env.template  docker-compose.yml
docker/database/: Dockerfile
docker/delivery_server/: Dockerfile
docker/proxysql/: Dockerfile  proxysql.cnf
docker/user_server/: Dockerfile
docker/writer_user/: Dockerfile
docs/: components.md  context.md  delivery_server.yml  performance.md  performance_raw.text  task.md  user_server.yml
migrations/: 000001_create_tables.down.sql  000001_create_tables.up.sql  000002_upload_data.down.sql  000002_upload_data.up.sql  000002_сreate_delivery_data.down.sql  000002_сreate_delivery_data.up.sql  000003_upload_user_data.down.sql  000003_upload_user_data.up.sql  upload_data.py  upload_user_data.py
src/: CMakeLists.txt  main.cpp  main_delivery_server.cpp  main_user_server.cpp  main_user_writer.cpp  start.sh
src/config/: config.cpp  config.h
src/delivery_server/: http_request_factory.h  web_server.h
src/delivery_server/handlers/: delivery_handler.h  package_handler.h
src/helpers/: get_hash.h  identity_helper.h  send_message.h  send_not_found_exception.h  send_unauthorized_exception.h
src/models/: cache.cpp  cache.h  database.cpp  database.h  delivery.cpp  delivery.h  package.cpp  package.h  user.cpp  user.h
src/server/: http_request_factory.h  web_server.h
src/server/handlers/: delivery_handler.h  package_handler.h  user_handler.h
src/test/: get_cache.lua  get_no_cache.lua  test_cache.sh
src/user_server/: http_request_factory.h  web_server.h
src/user_server/handlers/: user_handler.h
